--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,31 +32,32 @@ android {
     }
 
 }
-    dependencies {
-        implementation fileTree(include: ['*.jar'], dir: 'libs')
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-        implementation 'androidx.appcompat:appcompat:1.4.2'
-        implementation 'com.google.android.material:material:1.6.1'
-        implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-        implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
-        implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
-        implementation 'androidx.navigation:navigation-fragment:2.5.0'
-        implementation 'androidx.navigation:navigation-ui:2.5.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-fragment:2.5.0'
+    implementation 'androidx.navigation:navigation-ui:2.5.0'
 
-        testImplementation 'junit:junit:4.13.2'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-        //Add library
-        implementation 'android.arch.lifecycle:extensions:1.1.1'
-        implementation 'com.firebaseui:firebase-ui-database:1.2.0'
-        implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    //Add library
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
-        implementation 'com.squareup.picasso:picasso:2.5.2'
-        implementation 'androidx.cardview:cardview:1.0.0'
-        implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
-      //  implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    implementation files('libs/com.amulyakhare.textdrawable-1.0.1.jar')
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 
 
-    }
+}
