--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 buildscript {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
+
         classpath 'com.google.gms:google-services:4.3.13'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
