--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     //Add library
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
