--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoFinal"
         tools:targetApi="31">
+        <service
+            android:name=".Service.ListenOrden"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".EstadoDeOrden"
             android:exported="false" />
