--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,8 @@ dependencies {
     //para mensajeria
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.pusher:push-notifications-android:1.9.0'
+    implementation 'com.android.volley:volley:1.2.1'
 
 }
+apply plugin: 'com.google.gms.google-services'
