--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,7 @@ dependencies {
     //librearias
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
-
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
@@ -73,6 +71,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.pusher:push-notifications-android:1.9.0'
     implementation 'com.android.volley:volley:1.2.1'
+
+    //libreria recordar usuario
+    implementation 'io.github.pilgr:paperdb:2.7.2'
+    implementation 'com.github.rey5137:material:1.3.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
